--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@tanstack/react-query": "^5.20.2",
     "axios": "^1.6.7",
     "prettier": "^3.2.5",
@@ -19,8 +20,10 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
+    "react-multi-date-picker": "^4.4.1",
     "react-otp-input": "^3.1.1",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "react-tag-input-component": "^2.0.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
